# PyLearn

./: .pre-commit-config.yaml  db.sqlite3  manage.py  note.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylearn_ci.yml
PyLearn/: asgi.py  settings.py  urls.py  wsgi.py
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_length.py  0003_learning_prerequisite_tag.py  0004_learning_course_learning_description_and_more.py  0005_video.py  0006_video_is_preview.py  0007_alter_learning_description_and_more.py  0008_alter_video_video_id.py  0009_alter_course_description_alter_course_name_and_more.py  0010_course_slug_alter_course_discount.py  0011_alter_course_discount_alter_course_slug.py  0012_alter_course_slug.py  0013_alter_course_slug.py  0014_alter_course_slug.py  0015_usercourse_payment.py  0016_payment_course_payment_user.py  0017_alter_payment_user_course.py
courses/static/courses/css/: common.css  scrollbar.css
courses/static/courses/js/: course_page.js
courses/templates/courses/: base.html  check-out.html  course_page.html  home.html  login.html  signup.html
courses/templatetags/: course_custom_tags.py
files/resource/: 精通Python學習計畫學習綱要.docx
