[tool.poetry]
name = "pylearn"
version = "0.1.0"
description = ""
authors = ["steven <msycomtw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
